tdf#154546 skip dispatch when presenter controller is not set

mpPresenterController is sometimes unset and this will cause a
crash when pressing the presenter console's Exchange button.

Change-Id: Ibfc866d573ce0c535df5c8fdbd6d358353784854
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150456
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit 6f4fb52116c08b0c6247dc4828442f4e3644e9eb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150775
(cherry picked from commit 14c4b0d11211cc27fb3a0cae246d8e971d6d8f9a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150793
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>